--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,3 +3,18 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  position: relative;
+}
+.theme__box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+}
+body,
+#text {
+  transition: all 1s linear;
+}
