--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,10 @@ body {
   height: 100vh;
   position: fixed;
 }
+#text {
+  line-height: 1.5;
+  font: 2em sans-serif;
+}
 /* .transition {
   transition: all 1s linear;
 } */
