--- a/styles/sun-moon_forest_styles.css
+++ b/styles/sun-moon_forest_styles.css
@@ -1,29 +1,29 @@
 .sun-moon-forest {
   position: relative;
-  width: 200px;
-  height: 90px;
-  border: 1px solid red;
+  width: 30vw;
   cursor: pointer;
   overflow: hidden;
+  border: none;
+  overflow: hidden;
   background-size: cover;
-  border-radius: 50px;
-  background-image: url("../img/sun-moon_forest_svg/Property\ 1=land\,\ Property\ 2=light.svg");
+  background-position: center;
+  background-image: url("../img/sun-moon_forest_svg/light.svg");
 }
 .s-m_bac__forest {
-  opacity: 1;
+  opacity: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../img/sun-moon_forest_svg/Property\ 1=land\,\ Property\ 2=dark.svg");
-  transition: all 1s linear;
+  background-size: cover;
+  background-position: center;
+  background-image: url("../img/sun-moon_forest_svg/dark.svg");
+  transition: opacity 1s linear;
 }
 .forest__switch {
   position: absolute;
   top: 50%;
   transform: translate(0, -50%);
-  left: 5%;
+  left: 10%;
   border-radius: 50%;
-  width: 80px;
-  height: 80px;
   background-color: white;
   transition: transform 1s linear;
 }
