--- a/styles/sun-moon_theme_styles.css
+++ b/styles/sun-moon_theme_styles.css
@@ -6,27 +6,43 @@
   overflow: hidden;
   border: none;
   position: relative;
-  background-image: url("../img/sun-moon_theme_svg/Union.svg"),
-    url("../img/sun-moon_theme_svg/Union.svg"),
-    url("../img/sun-moon_theme_svg/Union.svg"),
-    linear-gradient(#66ffed, #ffeeb2);
-  background-size: 26%, 17%, 12%, auto;
-  background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
-  background-position: top 20% right 30%, bottom 20% right 40%,
-    bottom 40% right 10%, center;
+  background-image: linear-gradient(#66ffed, #ffeeb2);
   box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
 }
-.s-m_bac__l {
+.s-m_clouds {
+  background-size: 26%, 17%, 12%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 99;
+  top: 0;
+  background-repeat: no-repeat;
+  background-position: top 20% right 30%, bottom 20% right 40%,
+    bottom 40% right 10%;
+  background-image: url("../img/sun-moon_theme_svg/cloud.svg"),
+    url("../img/sun-moon_theme_svg/cloud.svg"),
+    url("../img/sun-moon_theme_svg/cloud.svg");
+  transform: translateY(100%);
+}
+.s-m_stars {
   background-image: url("../img/sun-moon_theme_svg/Star1.svg"),
     url("../img/sun-moon_theme_svg/Star2.svg"),
     url("../img/sun-moon_theme_svg/Star3.svg"),
     url("../img/sun-moon_theme_svg/Star4.svg"),
-    url("../img/sun-moon_theme_svg/Star5.svg"),
-    linear-gradient(#2b4485, #afcaff);
+    url("../img/sun-moon_theme_svg/Star5.svg");
+  background-position: top 20% left 30%, bottom 20% left 40%,
+    bottom 40% left 10%, top 10% left 15%, top 60% left 30%;
   background-repeat: no-repeat;
-  background-size: 11%, 6%, 12%, 4%, 8%, auto;
-  background-position: top 10% left 30%, bottom 20% left 40%,
-    bottom 40% left 10%, top 15% left 10%, top 30% left 50%, center;
+  background-size: 11%, 6%, 12%, 4%, 8%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 99;
+  transform: translateY(100%);
+}
+.s-m_bac__l {
+  background-image: linear-gradient(#2b4485, #afcaff);
   width: 100%;
   height: 100%;
   opacity: 0;
@@ -52,3 +68,15 @@
 .switch__m {
   opacity: 0;
 }
+/* transition  при оновленні сторінки*/
+/* .transition .sun-moon__theme,
+.transition .s-m_bac__l,
+.transition .switch > img,
+.transition .s-m_bac__l,
+.transition .switch,
+.transition {
+  transition: all 1s linear;
+}
+.transition .sun-moon__theme {
+  transition: opasity 1s linear;
+} */
