--- a/sun-moon_first/sun-moon_theme_styles.css
+++ b/sun-moon_first/sun-moon_theme_styles.css
@@ -19,17 +19,17 @@
   background-repeat: no-repeat;
   background-position: top 20% right 30%, bottom 20% right 40%,
     bottom 40% right 10%;
-  background-image: url("../img/sun-moon_theme_svg/cloud.svg"),
-    url("../img/sun-moon_theme_svg/cloud.svg"),
-    url("../img/sun-moon_theme_svg/cloud.svg");
+  background-image: url("../sun-moon_first/sun-moon_theme_svg/cloud.svg"),
+    url("../sun-moon_first/sun-moon_theme_svg/cloud.svg"),
+    url("../sun-moon_first/sun-moon_theme_svg/cloud.svg");
   transform: translateY(100%);
 }
 .s-m_stars {
-  background-image: url("../img/sun-moon_theme_svg/Star1.svg"),
-    url("../img/sun-moon_theme_svg/Star2.svg"),
-    url("../img/sun-moon_theme_svg/Star3.svg"),
-    url("../img/sun-moon_theme_svg/Star4.svg"),
-    url("../img/sun-moon_theme_svg/Star5.svg");
+  background-image: url("../sun-moon_first/sun-moon_theme_svg/Star1.svg"),
+    url("../sun-moon_first/sun-moon_theme_svg/Star2.svg"),
+    url("../sun-moon_first/sun-moon_theme_svg/Star3.svg"),
+    url("../sun-moon_first/sun-moon_theme_svg/Star4.svg"),
+    url("../sun-moon_first/sun-moon_theme_svg/Star5.svg");
   background-position: top 20% left 30%, bottom 20% left 40%,
     bottom 40% left 10%, top 10% left 15%, top 60% left 30%;
   background-repeat: no-repeat;
@@ -45,7 +45,9 @@
   background-image: linear-gradient(#2b4485, #afcaff);
   width: 100%;
   height: 100%;
-  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
   box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
 }
 .switch {
