--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,17 +3,18 @@
   padding: 0;
   box-sizing: border-box;
 }
-body {
-  position: relative;
-}
+
 .theme__box {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  flex-direction: column;
   width: 100%;
   height: 100vh;
   position: fixed;
+}
+button {
+  margin: 20px;
+  margin: auto;
 }
 #text {
   line-height: 1.5;
