--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: column;
   width: 100%;
   height: 100vh;
   position: fixed;
