--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,16 +6,12 @@
 
 .theme__box {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   flex-direction: column;
   width: 100%;
   height: 100vh;
   position: fixed;
-}
-button {
-  margin: 20px;
-  margin: auto;
 }
 #text {
   line-height: 1.5;
